# neuro-analog

./: .gitignore  README.md  make_runpod_bundle.py  pyproject.toml  verify.py
ark_exports/: deq_ark.py  diffusion_ark.py  ebm_ark.py  flow_ark.py  neural_ode_ark.py  ssm_ark.py  transformer_ffn_ark.py
benchmarks/: bench_triton.py
configs/: hardware_profile.yaml
docs/: FUSED_ANALOG_KERNEL_TDD.md  ark_export.md  experiments.md  shem_export.md  simulator.md
examples/: 01_analyze_mamba.py  01_quickstart.py  02_seven_arch_sweep.py  03_ark_pipeline.py  03_shem_pipeline.py  04_amenability_scoring.py  04_ark_export.py  04_cross_architecture.py  05_cdg_bridge.py  05_shem_pipeline_demo.py  06_ebm_ark.py  07_flow_ark.py  08_diffusion_ark.py  09_transformer_ffn_ark.py  10_deq_ark.py  11_ssm_ark.py
experiments/cross_arch_tolerance/: README.md  TECHNICAL_NOTE.md  diagnose_analog.py  evaluate_in_ark.py  evaluate_in_shem.py  layer_sensitivity.py  out.txt  out_fixed.txt  out_unbuffered.txt  plot_heatmaps.py  (+11 more)
neuro_analog/: __init__.py  pipeline.py
notebooks/: Fused_Kernel_Validation.ipynb  amenability_analysis.ipynb  analog_hardware_tour.ipynb  architecture_families.ipynb  ark_export.ipynb  intermediate_representation.ipynb  neural_ode_ark.py  quickstart_tour.ipynb
outputs/: ssm_shem_test.py  taxonomy.json
tests/: test_amenability_integration.py  test_ark_bridge.py  test_ark_export.py  test_backend_extension.py  test_energy_model.py  test_extractors.py  test_ir.py  test_nonidealities.py  test_seq_len_scaling.py  test_shem_export.py  test_simulator.py  test_triton_kernel.py
(+559 files in other folders)
